--- a/Williams/footer.css
+++ b/Williams/footer.css
@@ -1,5 +1,5 @@
 footer {
-  background-color: #28abb9;
+  background-color: #f2f2f2;
   display: flex;
   flex-direction: column;
   justify-content: center;
